<?xml version="1.0" encoding="utf-8"?>

<!-- The menu found in the main multi-day forecast  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_map"
        android:title="@string/action_map"
        app:showAsAction="never" />
    <item
        android:id="@+id/sign_out"
        android:title="@string/sign_out"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/menu_refresh"/>
</menu>